syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
package com.trustbank.client_mobile.proto;

service MobileAppService{
  rpc GetAppTheme(GetAppThemeRequest) returns (MobileTheme);

  rpc ChangeMobileTheme(MobileTheme) returns (MobileTheme);

  rpc HideAccount(AccountId) returns (EmptyResponse);

  rpc ShowAccount(AccountId) returns (EmptyResponse);
}

message EmptyResponse{

}

message AccountId{
  string id = 1;
}

message GetAppThemeRequest{

}

enum Theme{
  LIGHT = 0;
  DARK = 1;
}

message MobileTheme{
  Theme theme = 1;
}